[package]
name = "skyforest-rasterizer"
version = "0.1.0"
edition = "2021"

[lib]
name = "skyforest_rasterizer"
path = "src/lib.rs"

[[bin]]
name = "skyforest-rasterizer"
path = "src/main.rs"

[[bin]]
name = "api-server"
path = "src/bin/api_server.rs"

[dependencies]
flate2 = "1.0"
jpeg-decoder = "0.3"
memmap2 = "0.9"
rayon = "1.10"
proj = "0.27"
crossbeam = "0.8"
dashmap = "6.0"
libc = "0.2"
axum = { version = "0.7", features = ["multipart"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
csv = "1.3"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "fs"] }
mime = "0.3"

[dev-dependencies]
tempfile = "3.8"
